--- a/app/src/main/res/layout/att_fragment.xml
+++ b/app/src/main/res/layout/att_fragment.xml
@@ -6,141 +6,158 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
-    <TextView
-        android:text="Attributes"
-        android:textColor="#FFFFFF"
-        android:background="#303030"
-        android:layout_above="@id/tablay"
-        android:textSize="70sp"
-        android:textStyle="bold"
-        android:layout_gravity="center"
-        android:textAlignment="center"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:stretchColumns="*"
-        android:background="#303030"
-        android:id="@+id/tablay"
-        >
-        <TableRow
+        android:layout_height="match_parent"
+        android:background="#303030">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
             <TextView
-                android:text="Strength"
-                android:textSize="40sp"
-                android:layout_gravity="start"
+                android:text="Attributes"
                 android:textColor="#FFFFFF"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-            <EditText
-                android:layout_height="match_parent"
-                android:textColor="#FFFFFF"
-                android:layout_width="match_parent"
-                android:textSize="40sp"
+                android:layout_above="@id/tablay"
+                android:textSize="70sp"
+                android:textStyle="bold"
+                android:layout_gravity="center"
                 android:textAlignment="center"
-                android:inputType="number"
-                android:id="@+id/str"/>
-        </TableRow>
-        <TableRow
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            >
-            <TextView
-                android:text="Dexterity"
-                android:textSize="40sp"
-                android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                android:textColor="#FFFFFF"
-                android:layout_gravity="start"/>
-            <EditText
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                />
+            <TableLayout
                 android:layout_width="match_parent"
-                android:textColor="#FFFFFF"
-                android:textSize="40sp"
-                android:textAlignment="center"
-                android:inputType="number"
-                android:id="@+id/dex"/>
-        </TableRow>
-        <TableRow
-            android:layout_height="match_parent"
-            android:layout_width="match_parent">
-            <TextView
-                android:text="Intelligence"
-                android:textSize="40sp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textColor="#FFFFFF"
-                android:layout_gravity="start"/>
-            <EditText
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:textColor="#FFFFFF"
-                android:textSize="40sp"
-                android:inputType="number"
-                android:textAlignment="center"
-                android:id="@+id/inte"/>
-        </TableRow>
-        <TableRow
-            android:layout_height="match_parent"
-            android:layout_width="match_parent">
-            <TextView
-                android:text="Wisdom"
-                android:textSize="40sp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textColor="#FFFFFF"
-                android:layout_gravity="start"/>
-            <EditText
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:textColor="#FFFFFF"
-                android:textSize="40sp"
-                android:inputType="number"
-                android:textAlignment="center"
-                android:id="@+id/wis"/>
-        </TableRow>
-        <TableRow
-            android:layout_height="match_parent"
-            android:layout_width="match_parent">
-            <TextView
-                android:text="Constitution"
-                android:textSize="40sp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textColor="#FFFFFF"
-                android:layout_gravity="start"/>
-            <EditText
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:textColor="#FFFFFF"
-                android:textSize="40sp"
-                android:inputType="number"
-                android:textAlignment="center"
-                android:id="@+id/con"/>
-        </TableRow>
-        <TableRow
-            android:layout_height="match_parent"
-            android:layout_width="match_parent">
-            <TextView
-                android:text="Charisma"
-                android:textSize="40sp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textColor="#FFFFFF"
-                android:layout_gravity="start"/>
-            <EditText
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:textColor="#FFFFFF"
-                android:textSize="40sp"
-                android:inputType="number"
-                android:textAlignment="center"
-                android:id="@+id/cha"/>
-        </TableRow>
+                android:layout_height="fill_parent"
+                android:stretchColumns="*"
+                android:background="#303030"
+                android:id="@+id/tablay"
+                >
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:text="Strength"
+                        android:textSize="40sp"
+                        android:layout_gravity="start"
+                        android:textColor="#FFFFFF"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"/>
+                    <EditText
+                        android:layout_height="match_parent"
+                        android:textColor="#FFFFFF"
+                        android:layout_width="match_parent"
+                        android:textSize="40sp"
+                        android:textAlignment="center"
+                        android:inputType="number"
+                        android:id="@+id/str"/>
+                </TableRow>
+                <TableRow
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    >
+                    <TextView
+                        android:text="Dexterity"
+                        android:textSize="40sp"
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent"
+                        android:textColor="#FFFFFF"
+                        android:layout_gravity="start"/>
+                    <EditText
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent"
+                        android:textColor="#FFFFFF"
+                        android:textSize="40sp"
+                        android:textAlignment="center"
+                        android:inputType="number"
+                        android:id="@+id/dex"/>
+                </TableRow>
+                <TableRow
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent">
+                    <TextView
+                        android:text="Intelligence"
+                        android:textSize="40sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textColor="#FFFFFF"
+                        android:layout_gravity="start"/>
+                    <EditText
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent"
+                        android:textColor="#FFFFFF"
+                        android:textSize="40sp"
+                        android:inputType="number"
+                        android:textAlignment="center"
+                        android:id="@+id/inte"/>
+                </TableRow>
+                <TableRow
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent">
+                    <TextView
+                        android:text="Wisdom"
+                        android:textSize="40sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textColor="#FFFFFF"
+                        android:layout_gravity="start"/>
+                    <EditText
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent"
+                        android:textColor="#FFFFFF"
+                        android:textSize="40sp"
+                        android:inputType="number"
+                        android:textAlignment="center"
+                        android:id="@+id/wis"/>
+                </TableRow>
+                <TableRow
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent">
+                    <TextView
+                        android:text="Constitution"
+                        android:textSize="40sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textColor="#FFFFFF"
+                        android:layout_gravity="start"/>
+                    <EditText
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent"
+                        android:textColor="#FFFFFF"
+                        android:textSize="40sp"
+                        android:inputType="number"
+                        android:textAlignment="center"
+                        android:id="@+id/con"/>
+                </TableRow>
+                <TableRow
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent">
+                    <TextView
+                        android:text="Charisma"
+                        android:textSize="40sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textColor="#FFFFFF"
+                        android:layout_gravity="start"/>
+                    <EditText
+                        android:layout_height="match_parent"
+                        android:layout_width="match_parent"
+                        android:textColor="#FFFFFF"
+                        android:textSize="40sp"
+                        android:inputType="number"
+                        android:textAlignment="center"
+                        android:id="@+id/cha"/>
+                </TableRow>
 
-    </TableLayout>
+            </TableLayout>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Save Changes"
+                android:textSize="50sp"
+                android:textAlignment="center"
+                android:id="@+id/attr_save"/>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
