--- a/app/src/main/res/layout/sav_throw.xml
+++ b/app/src/main/res/layout/sav_throw.xml
@@ -292,6 +292,90 @@
                         android:id="@+id/grap_misc"/>
                 </TableRow>
             </TableLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Armor Class"
+                android:textSize="50sp"
+                android:textAlignment="center"
+                android:textStyle="bold"/>
+            <TableLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:stretchColumns="*">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="Total AC"
+                        android:textSize="40sp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="10"
+                        android:id="@+id/tot_ac"
+                        android:textSize="40sp"
+                        android:textStyle="bold"
+                        android:textAlignment="center"/>
+                </TableRow>
+                <TableRow
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Natural Armor"
+                        android:textSize="40sp"/>
+                    <EditText
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:inputType="number"
+                        android:textSize="40sp"
+                        android:textAlignment="center"
+                        android:id="@+id/nat_arm"/>
+                </TableRow>
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="Deflection"
+                        android:textSize="40sp"/>
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:inputType="number"
+                        android:textSize="40sp"
+                        android:textAlignment="center"
+                        android:id="@+id/deflect"/>
+                </TableRow>
+                <TableRow
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Misc Modifier"
+                        android:textSize="40sp"/>
+                    <EditText
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:inputType="number"
+                        android:textAlignment="center"
+                        android:textSize="40sp"/>
+                </TableRow>
+            </TableLayout>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Save Changes"
+                android:textSize="50sp"
+                android:textAlignment="center"
+                android:id="@+id/bat_save"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
