--- a/app/src/main/res/layout/weap.xml
+++ b/app/src/main/res/layout/weap.xml
@@ -65,7 +65,7 @@
                     <EditText
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        android:inputType="number"
+                        android:inputType="text"
                         android:textAlignment="center"
                         android:textSize="20sp"
                         android:id="@+id/dmg"/>
@@ -166,7 +166,7 @@
                     <EditText
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        android:inputType="number"
+                        android:inputType="text"
                         android:textAlignment="center"
                         android:textSize="20sp"
                         android:id="@+id/dmg_1"/>
