--- a/app/src/main/res/layout/skills.xml
+++ b/app/src/main/res/layout/skills.xml
@@ -281,7 +281,7 @@
                         android:text="0"
                         android:hint="int"
                         android:textAlignment="center"
-                        android:id="@+id/decscrit_mod"/>
+                        android:id="@+id/decscript_mod"/>
                     <EditText
                         android:layout_height="match_parent"
                         android:layout_width="match_parent"
@@ -1326,6 +1326,13 @@
 
 
             </TableLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Currently takes all ranks as full points even if you character is not proficient in that skill so you will need to make sure you halve the ranks yourself before saving"
+                android:textAlignment="center"
+                android:textColor="#FF00FF"
+                android:textSize="20sp"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
