--- a/app/src/main/res/layout/att_fragment.xml
+++ b/app/src/main/res/layout/att_fragment.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#303030">
+    tools:context=".MainActivity"
+    android:background="#303030">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -17,7 +14,6 @@
             <TextView
                 android:text="Attributes"
                 android:textColor="#FFFFFF"
-                android:layout_above="@id/tablay"
                 android:textSize="70sp"
                 android:textStyle="bold"
                 android:layout_gravity="center"
@@ -225,6 +221,4 @@
                 android:textAlignment="center"
                 android:id="@+id/attr_save"/>
         </LinearLayout>
-    </ScrollView>
-
-</LinearLayout>
+</ScrollView>
