--- a/app/src/main/res/layout/weap.xml
+++ b/app/src/main/res/layout/weap.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:ignore="UselessParent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Weapons"
+                android:text="@string/weapons"
                 android:textAlignment="center"
                 android:textStyle="bold"
                 android:textSize="50sp"/>
@@ -27,22 +29,22 @@
                     <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        android:text="Type"
+                        android:text="@string/type"
                         android:textSize="20sp"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Attack Bonus"
+                        android:text="@string/attack_bonus"
                         android:textSize="20sp"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Damage"
+                        android:text="@string/damage"
                         android:textSize="20sp"/>
                     <TextView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        android:text="Critical"
+                        android:text="@string/critical"
                         android:textSize="20sp"/>
                 </TableRow>
                 <TableRow
@@ -83,7 +85,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Range"
+                        android:text="@string/range"
                         android:textSize="20sp"/>
                     <TextView
                         android:layout_height="wrap_content"
